tests/baselines/reference/importInTypePosition.errors.txt
importInTypePosition.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
importInTypePosition.ts(9,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
importInTypePosition.ts(14,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== importInTypePosition.ts (3 errors) ====
    module A {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export class Point {
            constructor(public x: number, public y: number) { }
        }
        export var Origin = new Point(0, 0);
    }
    
    // no code gen expected
    module B {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    
        import a = A; //Error generates 'var <Alias> = <EntityName>;'
    }
    // no code gen expected
    module C {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    
        import a = A; //Error generates 'var <Alias> = <EntityName>;'
        var m: typeof a;
        var p: a.Point;
        var p = { x: 0, y: 0 };
    }
    